[fix bug 1179790] Header on firefox/desktop page misaligned in IE

--- a/media/css/firefox/desktop/index.less
+++ b/media/css/firefox/desktop/index.less
@@ -6,7 +6,8 @@
 @import 'common.less';
 
 #wrapper {
-    margin-top: -162px; // family nav
+    margin-top: 0;
+    top: -162px; // family nav
 }
 
 // animation defaults
